# rules_experimental_android

./: .bazelrc  .gitignore  README.md  WORKSPACE  defs.bzl
composer/: BUILD  defs.bzl
examples/BasicSample/: BUILD.bazel
examples/BasicSample/gradle/wrapper/: gradle-wrapper.properties
examples/CustomMatcherSample/: BUILD.bazel
generator/: generator.py
marathon/: BUILD  Marathonfile.tpl  defs.bzl
