load(
    "@rules_experimental_android//:defs.bzl",
    "composer_instrumentation_test",
    "marathon_android_test",
)

licenses(["notice"])  # Apache 2.0

minSdkVersion = "21"
targetSdkVersion = "26"

android_library(
    name = "BasicSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        "@maven//:com_google_guava_guava"
    ],
)

android_binary(
    name = "BasicSample",
    custom_package = "com.example.android.testing.espresso.BasicSample",
    manifest = "app/src/main/AppManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":BasicSampleLib"],
)

android_library(
    name = "BasicSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample.test",
    deps = [
        ":BasicSampleLib",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_annotation_annotation",
        "@maven//:junit_junit",
        "@maven//:androidx_test_runner",
        "@maven//:androidx_test_ext_junit",
    ],
)

android_binary(
    name = "BasicSampleTest",
    custom_package = "com.example.android.testing.espresso.BasicSample.test",
    instruments = ":BasicSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":BasicSampleTestLib"],
)

composer_instrumentation_test(
    name = "BasicSampleComposerTest",
    test_app = ":BasicSampleTest",
)

marathon_android_test(
    name = "BasicSampleMarathonTest",
    test_app = ":BasicSampleTest",
)

API_LEVELS = [
    "19_x86",
    "21_x86",
    "22_x86",
    "23_x86",
]

[android_instrumentation_test(
    name = "BasicSampleInstrumentationTest_%s" % API_LEVEL,
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_%s_qemu2" % API_LEVEL,
    test_app = ":BasicSampleTest",
) for API_LEVEL in API_LEVELS]
