load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_experimental_android//:defs.bzl", "composer_instrumentation_test")

minSdkVersion = "21"

targetSdkVersion = "26"

licenses(["notice"])  # Apache 2.0

android_library(
    name = "CustomMatcherSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        "@maven//:androidx_annotation_annotation",
        "@maven//:com_google_guava_guava",
    ],
)

android_binary(
    name = "CustomMatcherSample",
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample",
    manifest = "app/src/main/AppManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":CustomMatcherSampleLib"],
)

android_library(
    name = "CustomMatcherSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample.test",
    deps = [
        ":CustomMatcherSampleLib",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_test_core",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_runner",
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_java_hamcrest",
    ],
)

android_binary(
    name = "CustomMatcherSampleTest",
    custom_package = "com.example.android.testing.espresso.CustomMatcherSample.test",
    instruments = ":CustomMatcherSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":CustomMatcherSampleTestLib"],
)

composer_instrumentation_test(
    name = "CustomMatcherComposerTest",
    test_apk = ":CustomMatcherSampleTest",
    api_level = 26,
    device_type = "pixel",
    google_apis = True,
)

composer_instrumentation_test(
    name = "CustomMatcherComposerTest_LocalDevice",
    test_apk = ":CustomMatcherSampleTest",
    device_type = "local",
    tags = ["manual"]
)
